--- a/config/sync/core.entity_view_display.donation.donation.default.yml
+++ b/config/sync/core.entity_view_display.donation.donation.default.yml
@@ -4,8 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.donation.donation.field_donation_type
-    - field.field.donation.donation.field_regular_donation
     - field.field.donation.donation.field_ged_transaction
+    - field.field.donation.donation.field_regular_donation
   module:
     - girchi_donations
     - user
@@ -22,12 +22,14 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_donation_type:
-    weight: 1
+    weight: 3
     label: above
     settings:
-      link_to_entity: false
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
-    type: string
+    type: boolean
     region: content
   field_ged_transaction:
     weight: 1
