--- a/config/sync/core.menu.static_menu_link_overrides.yml
+++ b/config/sync/core.menu.static_menu_link_overrides.yml
@@ -1,10 +1,10 @@
 definitions:
   contact__site_page:
-    enabled: false
+    weight: -50
     menu_name: footer
     parent: ''
+    enabled: true
     expanded: false
-    weight: -50
   node__add_page:
     weight: 1
     menu_name: admin
@@ -132,7 +132,7 @@ definitions:
     enabled: true
     expanded: false
   user__logout:
-    weight: -43
+    weight: -42
     menu_name: account
     parent: ''
     enabled: true
