--- a/composer.json
+++ b/composer.json
@@ -212,6 +212,7 @@
     "drupal/csv_serialization": "^1.0",
     "drupal/default_content": "^1.0@alpha",
     "drupal/devel": "^1.0@RC",
+    "drupal/devel_entity_updates": "^1.0",
     "drupal/diff": "^1.0@RC",
     "drupal/disable_messages": "^1.0",
     "drupal/dropzonejs": "dev-1.x",
